Fix on the alignment to the left (if nothing is present) on the application with multiple variations.

--- a/src/app/withInterpreter/AbstractAppWithInterpreter.scss
+++ b/src/app/withInterpreter/AbstractAppWithInterpreter.scss
@@ -59,6 +59,7 @@
 
 #viewChanger-container {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   align-items: flex-start;
 }
